# hello_tf

./: .gitignore  Cargo.toml  README.md  build.rs  requirements.txt
proto/: process.proto
pys/: gen_model.py  infer_client.py  infer_local.py  infer_pb2.py  process_pb2.py  process_pb2_grpc.py  process_server.py
pys/image_segmentation/: demo.py
src/: clients.rs  infer.rs  lib.rs  process.rs
src/handlers/: classify_image.rs  mod.rs
