[package]
name = "hello_tf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
prost = "0.11.9"
tensorflow = "0.21.0"
tokio = {version = "1.32.0", features = ["full"]}
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
